--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="card mb-3">
 				<div class="card-header #004d40 teal darken-4 text-white">
 					<center><h3>Kalkulator IPS dan IPK</h3></center>
-					<center>Made by Revaldi Eka Pramuja & Renno Virgonata</center>
+					<center>Made by Revaldi Eka Pramuja</center>
 				</div>
 
 				<div class="card-body">
